===============
TNRS 0.2.0
===============

## NEW FEATURES
* Added Spanish language vignette

## Bug fixes
* Fixed error in naming metadata elements

===============
TNRS 0.1.0
===============

## NEW FEATURES

* released to CRAN