@@ -5,3 +5,5 @@ doc
 Meta
 misc
 RTNRS.Rproj
+/doc/
+/Meta/
