@@ -13,7 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
         jsonlite,
-        RCurl,
+        httr,
         rjson
 Suggests:
         knitr,
