@@ -5,6 +5,6 @@ export(TNRS_citations)
 export(TNRS_metadata)
 export(TNRS_sources)
 export(TNRS_version)
-import(RCurl)
+import(httr)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
